--- a/deploy.yml
+++ b/deploy.yml
@@ -17,10 +17,23 @@
         - python-dev # Optional
         - python3-pip
         - python3-dev
+        - python3.8
         - nginx
+        - gunicorn
+        - postgresql
+        - postgresql-client
+
+    #Install VirtualEnv
+    - name: Install virtualenv via pip
+      pip:
+        name: virtualenv
+        executable: pip3
+      become: yes
+      become_user: root
 
 # Install the app, note: don't do these tasks with become sudo
 - hosts: webservers
+  become: yes
   tasks:
     - name: clone repo
       git:
@@ -30,8 +43,10 @@
     - name: install modules in a virtualenv
       pip:
         requirements: /home/{{ ansible_ssh_user }}/{{ app_name }}/requirements.txt
-        virtualenv: /home/{{ ansible_ssh_user }}/{{ app_name }}/env
-        virtualenv_python: python3.5
+        virtualenv: /home/{{ ansible_ssh_user }}/{{ app_name }}/venv
+        virtualenv_python: python3.8
+      tags:
+        - venv
 
 # Configure app systemd service and nginx
 - hosts: webservers
@@ -39,7 +54,7 @@
   become_method: sudo
   tasks:
     - name: template systemd service config
-      copy:
+      template:
         src: .service
         dest: /etc/systemd/system/{{ app_name }}.service
     - name: start systemd app service
