--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
 host_key_checking = False
-inventory         = ./.hosts
+inventory         = .hosts
+
 #roles_path       = ./playbooks/roles
