--- a/deploy.yml
+++ b/deploy.yml
@@ -25,12 +25,11 @@
     - name: install packages
       apt: name={{item}} state=latest
       with_items:
+        - python3.8
         - tree # Optional
-        - python-pip # Optional
-        - python-dev # Optional
+        - libpython3-stdlib
         - python3-pip
         - python3-dev
-        - python3.8
         - nginx
         - gunicorn
         - postgresql
